# glgine

./: .gitignore  CMakeLists.txt  Config.h  README.txt  glad.c  main.cpp  readme.txt
assets/models/track/: track.mtl
assets/models/track_180/: credits.txt  track_180.mtl
assets/models/track_sbend/: track_sbend.mtl
assets/models/track_slight/: track_slight.mtl
assets/models/track_straight/: track_straight.mtl
assets/models/train/: train.mtl
assets/models/wall/: credits.txt
assets/shaders/: illuminated.frag  illuminated.vert  shadow.frag  shadow.vert  textured.frag  textured.vert
cmake/: BuildGLEW.cmake  BuildGLFW.cmake  BuildGLM.cmake
colourroom/: CMakeLists.txt
colourroom/assets/shaders/: scenefragment.glsl  scenevertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  texturefragment.glsl  texturevertex.glsl
colourroom/include/: shaderloader.h
colourroom/src/: colourroom_nomain.cpp  colourroom_nomain.h  main_colourroom.cpp  shaderloader.cpp
include/: callbacks.hpp  complexrenderable.hpp  defaults.hpp  model.hpp  renderable.hpp  renderutils.hpp  shaders.hpp  textures.hpp  tracks.hpp
lightroom/: lab04.cpp
musicShow/shaders/: BackgroundFragment.shader  BackgroundVertex.shader  Fragment.shader  Vertex.shader
musicShow/src/: AudioFFT.h  AudioFile.cpp  AudioManager.h  Config.h  MenuManager.h  Mesh.h  MusicApplication.cpp  MusicApplication.h  MusicNote.cpp  MusicNote.h  Renderer.cpp  Renderer.h  Shader.h
shaders/: Fragment.shader  Vertex.shader
src/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  MenuManager.cpp  MenuManager.h  Mesh.cpp  Mesh.h  MusicApplication.cpp  MusicApplication.h  MusicNote.cpp  MusicNote.h  Renderer.cpp  Shader.cpp  callbacks.cpp  camera.cpp  complexrenderable.cpp  data.cpp  main.cpp  model.cpp  renderable.cpp  renderutils.cpp  shaders.cpp  textures.cpp  tracks.cpp
trainRoom/assets/models/track/: credits.txt
trainRoom/assets/models/train/: credits.txt
trainRoom/assets/models/wall/: wall.mtl
trainRoom/assets/shaders/: grid.vert  illuminated.vert
trainRoom/include/: camera.hpp  model.hpp  textures.hpp  tracks.hpp  train.hpp
trainRoom/src/: model.cpp  renderable.cpp  renderutils.cpp  textures.cpp  tracks.cpp  train.cpp
upsideDownRoom/src/: upsideDownRoom.cpp  upsideDownRoom.h
